--- a/YOLO_simple_answer.ipynb
+++ b/YOLO_simple_answer.ipynb
@@ -503,6 +503,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model\n",
+    "* Backbone-FPN-Head 구조\n",
+    "\n",
+    "![yolov8 model](https://github.com/Gwangiksin/ml_cv/blob/master/img/yolov8.png)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
