--- a/YOLO_ResNet_answer.ipynb
+++ b/YOLO_ResNet_answer.ipynb
@@ -1727,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1744,7 +1744,34 @@
       "  -> mAP@0.5: 0.024, mAP@0.5:0.95: 0.008\n",
       "[Epoch 5/200] Loss: 8.6905\n",
       "  -> mAP@0.5: 0.042, mAP@0.5:0.95: 0.015\n",
-      "[Epoch 6/200] Loss: 8.5339\n"
+      "[Epoch 6/200] Loss: 8.5339\n",
+      "  -> mAP@0.5: 0.039, mAP@0.5:0.95: 0.013\n",
+      "[Epoch 7/200] Loss: 8.2776\n",
+      "  -> mAP@0.5: 0.067, mAP@0.5:0.95: 0.023\n",
+      "[Epoch 8/200] Loss: 8.0511\n",
+      "  -> mAP@0.5: 0.060, mAP@0.5:0.95: 0.023\n",
+      "[Epoch 9/200] Loss: 7.8165\n",
+      "  -> mAP@0.5: 0.066, mAP@0.5:0.95: 0.025\n",
+      "[Epoch 10/200] Loss: 7.7260\n",
+      "  -> mAP@0.5: 0.074, mAP@0.5:0.95: 0.032\n",
+      "[Epoch 11/200] Loss: 7.6114\n",
+      "  -> mAP@0.5: 0.106, mAP@0.5:0.95: 0.042\n",
+      "[Epoch 12/200] Loss: 7.5002\n",
+      "  -> mAP@0.5: 0.093, mAP@0.5:0.95: 0.040\n",
+      "[Epoch 13/200] Loss: 7.4036\n",
+      "  -> mAP@0.5: 0.112, mAP@0.5:0.95: 0.047\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m pretrained \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# 3) 학습\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m200\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpretrained\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpretrained\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[25], line 46\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(num_epochs, batch_size, pretrained)\u001b[0m\n\u001b[1;32m     43\u001b[0m     loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[1;32m     44\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[0;32m---> 46\u001b[0m     loss_meter\u001b[38;5;241m.\u001b[39mupdate(\u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m, images\u001b[38;5;241m.\u001b[39msize(\u001b[38;5;241m0\u001b[39m))\n\u001b[1;32m     48\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m[Epoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum_epochs\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] Loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mloss_meter\u001b[38;5;241m.\u001b[39mavg\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     50\u001b[0m \u001b[38;5;66;03m# 에폭마다 간단히 test 진행\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
